force-app/main/default/objects/Memberships__c/fields/Active_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_Name__c</fullName>
    <label>Active Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>