force-app/main/default/objects/Memberships__c/fields/Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Id__c</fullName>
    <label>Enrollment Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>