force-app/main/default/objects/Memberships__c/fields/Grace_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_End_Date__c</fullName>
    <formula>TermEndDate__c +90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Period End Date</label>
    <type>Date</type>
</CustomField>