force-app/main/default/objects/Memberships__c/fields/Membership_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Membership_Account_Id__c</fullName>
    <label>Membership Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>