force-app/main/default/objects/Memberships__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <description>this fields indicates the application status of the membership applied</description>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Membership Activated</fullName>
            </value>
            <value>
                <fullName>In Grace Period</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Application Received</fullName>
                <isActive>false</isActive>
                <label>Application Received</label>
            </value>
            <value>
                <fullName>Membership Cancelled</fullName>
                <isActive>false</isActive>
                <label>Membership Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>