force-app/main/default/objects/Memberships__c/fields/Membership_Term__c.field-meta.xml
<CustomField>
    <fullName>Membership_Term__c</fullName>
    <formula>TRIM(
    BLANKVALUE(&quot;$&quot; &amp; TEXT(Fee__c), &quot;&quot;) &amp; 
    IF(NOT(ISBLANK(Fee__c)), &quot; &quot;, &quot;&quot;) &amp; 
    BLANKVALUE(TEXT(MembershipLevel__c), &quot;&quot;) &amp; 
    IF(NOT(ISBLANK(Membership_Type__r.Name)), &quot; &quot;, &quot;&quot;) &amp; 
    BLANKVALUE(TEXT(EnrollmentType__c), &quot;&quot;)
)</formula>
    <label>Membership Term</label>
    <type>Text</type>
</CustomField>