force-app/main/default/objects/Memberships__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Type</label>
    <referenceTo>Membership_Type__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>