force-app/main/default/objects/Memberships__c/fields/MembershipTerm__c.field-meta.xml
<CustomField>
    <fullName>MembershipTerm__c</fullName>
    <label>Membership Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>