force-app/main/default/objects/Memberships__c/fields/NonDeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>NonDeductibleAmount__c</fullName>
    <description>The amount of the membership fee that is not tax-deductible.</description>
    <label>Non Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>