force-app/main/default/objects/Memberships__c/fields/OriginDetail__c.field-meta.xml
<CustomField>
    <fullName>OriginDetail__c</fullName>
    <description>Detailed picklist field to specify the origin or source details.</description>
    <label>Origin Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>