force-app/main/default/objects/Memberships__c/fields/Related_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Id__c</fullName>
    <formula>Account__r.Account_Id__c</formula>
    <label>Related Account Id</label>
    <type>Text</type>
</CustomField>