force-app/main/default/objects/Memberships__c/fields/TermEndDate__c.field-meta.xml
<CustomField>
    <fullName>TermEndDate__c</fullName>
    <description>The date on which the membership term ends.</description>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>