force-app/main/default/objects/Memberships__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>TermEndDate__c</columns>
    <columns>Account__c</columns>
    <columns>Membership_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>